# pyeval

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
scripts/: sync-version.py
src/pyeval/: __main__.py  cmdline.py  code_transform.py  user_shell.py
src/pyeval/code_transform/: __init__.py  auto_import.py  base.py
tests/: test_auto_import.py  test_auto_import_undefined_name_finder.py  test_pyeval.py
