[tool.poetry]
name = "pyeval"
version = "0.0.1"
description = "Evaluate and print Python expressions"
license = "MIT"
authors = ["Yutao Yuan <infmagic2047reg@outlook.com>"]
readme = "README.rst"
repository = "https://github.com/infmagic2047/pyeval"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
isort = "^5.5.3"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
